[gd_scene load_steps=13 format=2]

[ext_resource path="res://PlayerWalk.gd" type="Script" id=1]
[ext_resource path="res://Graphics/dirt.png" type="Texture" id=2]
[ext_resource path="res://Graphics/chefSheet.png" type="Texture" id=3]
[ext_resource path="res://PlayerCam.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.0116959, 0.0175439, 0.994152, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.105263, 0.105263, 0.105263, 1, 0.381861, 0.381861, 0.381861, 1, 0.678947, 0.678947, 0.678947, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )
width = 2048

[sub_resource type="ParticlesMaterial" id=3]

trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 80, 35, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 360.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 20.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Flags", "Hue Variation", "Initial Velocity", "Linear Accel", "Radial Accel", "Scale" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 221.181, 17.2972 )

[sub_resource type="Animation" id=5]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walkDirt:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=6]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walkDirt:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=7]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walkDirt:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=8]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walkDirt:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]

position = Vector2( 257.88, 145.413 )
scale = Vector2( 0.25, 0.25 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="walkDirt" type="Particles2D" parent="."]

modulate = Color( 1, 1, 1, 0.349216 )
position = Vector2( 0, 285.038 )
emitting = false
amount = 40
lifetime = 0.1
one_shot = true
preprocess = 0.0
speed_scale = 0.5
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 720909
process_material = SubResource( 3 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="playerSprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
vframes = 5
hframes = 8
frame = 4
_sections_unfolded = [ "Animation" ]

[node name="meatCount" type="Label" parent="."]

margin_left = -155.0
margin_top = -315.0
margin_right = -61.0
margin_bottom = -301.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Goblin Meat: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="playerCam" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = -100000
limit_top = -100000
limit_right = 100000
limit_bottom = 100000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )
_sections_unfolded = [ "Limit", "Smoothing", "Transform" ]

[node name="playerHitbox" type="CollisionShape2D" parent="."]

position = Vector2( -1.55798, 279.244 )
scale = Vector2( 0.319347, 1 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="playerAnimator" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/down = SubResource( 5 )
anims/left = SubResource( 6 )
anims/right = SubResource( 7 )
anims/up = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback", "playback" ]


